--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+
+
+.container{
+  min-height:max-content;
+  max-width: 450px;
+  height: max-content;
+ 
+  background-color: whitesmoke;
+  box-shadow: 0px 0px 10px gray;
+  margin:30px auto 20px auto;
+  padding: 15px 50px;
+}
+body{
+  background-image: url('./background.jpg');
+  background-position: initial;
+}
+.expense-container{
+  display: flex;
+  box-shadow: 0px 0px 10px gray;
+
+  background-color: white;
+  justify-content: space-around;
+}
+h1{
   text-align: center;
 }
+.transaction-form input{
+width: 100%;
+margin: 10px 0px;
+padding: 5px 0px;
+display: flex;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.transaction-list{
+  margin:0;
+  padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.transaction-list > li{
+  display:flex;
+  justify-content: space-between;
+  box-shadow: 0 0 10px gray;
+  padding:  5px 2px;
+  margin: 5px 0 ;
 }
