--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ h1{
 .transaction-form input{
 width: 100%;
 margin: 10px 0px;
-padding: 5px 0px;
+padding: 5px 6px;
 display: flex;
 
 }
@@ -39,6 +39,52 @@ display: flex;
   display:flex;
   justify-content: space-between;
   box-shadow: 0 0 10px gray;
-  padding:  5px 2px;
+  padding:  5px 6px;
   margin: 5px 0 ;
 }
+.delete-btn {
+  cursor: pointer;
+  background-color: #e74c3c;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 2px 5px;
+  position: absolute;
+ margin-top: 10px;
+  transform: translate(-100%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.delete-btn:hover{
+  opacity: 1;
+}
+h3{
+  FONT-STYLE: italic;
+    FONT-WEIGHT: BOLDER;
+}
+label{
+  font-size: 17px;
+  font-weight: 600;
+  font-kerning: 3px;
+}
+#submitbutton{
+ 
+  font-size: 11px;
+  font-weight: bold;
+  width: 224px;
+  height: 35px;
+  letter-spacing: 0.5px;
+  padding-left: 58px;
+  text-align: center; 
+  background-color: lightblue;
+  box-shadow: 1px 1px 7px gray;
+}
+ #income{
+color:green;
+padding-left: 5px;
+ }
+ #expense{
+   color:red;
+   padding-left: 8px;
+ }
